--- a/prd/index.html
+++ b/prd/index.html
@@ -8,5 +8,5 @@
   <body style="height:100%;">
     <div id="firebaseui-auth-container"></div>
     <div id="main" class='fixed-app'></div>
-  </body>
+  <script type="text/javascript" src="main.df29d9bc10714065dc1d.js"></script></body>
 </html>
