--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,20 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./hoge.css">
+    <style type="text/css">
+.ab {
+  position: absolute;
+  bottom: 32px;
+}
+.fixed-app {
+  height: 100%;
+  overflow: hidden;
+}
+.scroll {
+  height: 100%;
+  overflow: scroll;
+}
+    </style>
   </head>
   <body style="height:100%;">
     <div id="firebaseui-auth-container"></div>
