--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html style="height:100%;">
+<html style="width:100vw;height:100%;overflow:hidden">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="/manifest.json">
   </head>
-  <body style="height:100%;">
+  <body style="width:100vw;height:100%;overflow:hidden">
     <div id="firebaseui-auth-container"></div>
     <div id="main" class='fixed-app'></div>
   </body>
