--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
   </head>
   <body style="width:100vw;height:100%;overflow:hidden">
     <div id="firebaseui-auth-container"></div>
-    <div id="main" class='fixed-app'></div>
+    <div id="main" style='height: 100%; overflow: hidden;'></div>
   </body>
 </html>
