--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   </head>
   <body style="width:100vw;height:100%;overflow:hidden">
     <div id="firebaseui-auth-container"></div>
-    <div id="main" style='height: 100%; overflow: hidden;'></div>
+    <div id="main" class='has-background-grey-lighter has-text-grey-dark' style='height: 100%; overflow: hidden;'></div>
   </body>
 </html>
