--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="width:100vw;height:100%;overflow:hidden">
+<html>
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,8 +7,8 @@
     <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/fontawesome.js" integrity="sha384-xl26xwG2NVtJDw2/96Lmg09++ZjrXPc89j0j7JHjLOdSwHDHPHiucUjfllW0Ywrq" crossorigin="anonymous"></script>
     <link rel="manifest" href="/manifest.json">
   </head>
-  <body style="width:100vw;height:100%;overflow:hidden">
+  <body class="has-background-grey-lighter has-text-grey-dark">
     <div id="firebaseui-auth-container"></div>
-    <div id="main" class='has-background-grey-lighter has-text-grey-dark' style='height: 100%; overflow: hidden;'></div>
+    <div id="root"></div>
   </body>
 </html>
